# purrnite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: check.rs  fortnite.rs  main.rs  popup.rs  raven.rs
src/fortnite/: api_com.rs  api_io.rs  error.rs  skins.rs  structs.rs
