[package]
name = "purrnite"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio_schedule = "0.3.1"
async-trait = "0.1.74"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
native-windows-gui = "1.0.13"
open = "5.0.1"
